@@ -126,7 +126,7 @@ static const decode_table_t oDecodeTable[] =
   { "CMF", eCB_Void, true, eRslt_ARM, { .vd = m_cmf } }, /* CMF CC or CMFE CC */
   { "CMN", eCB_Void, true, eRslt_ARM, { .vd = m_cmn } }, /* CMN CC SP */
   { "CMP", eCB_Void, true, eRslt_ARM, { .vd = m_cmp } }, /* CMP CC SP */
-  { "CN", eCB_Symbol, false, eRslt_ARM, { .sym = c_cn } }, /* CN */
+  { "CN", eCB_Symbol, false, eRslt_None, { .sym = c_cn } }, /* CN */
   { "CNF", eCB_Void, true, eRslt_ARM, { .vd = m_cnf } }, /* CNF CC or CNFE CC */
   { "CODE16", eCB_Void, false, eRslt_None, { .vd = c_code16 } }, /* CODE16 */
   { "CODE32", eCB_Void, false, eRslt_None, { .vd = c_code32 } }, /* ARM/CODE32 */
@@ -160,7 +160,7 @@ static const decode_table_t oDecodeTable[] =
   { "FIX", eCB_Void, true, eRslt_ARM, { .vd = m_fix } }, /* FIX CC [P] R */
   { "FLT", eCB_Void, true, eRslt_ARM, { .vd = m_flt } }, /* FLT CC P R */
   { "FML", eCB_Void, true, eRslt_ARM, { .vd = m_fml } }, /* FML CC P R */
-  { "FN", eCB_Symbol, false, eRslt_ARM, { .sym = c_fn } }, /* FN */
+  { "FN", eCB_Symbol, false, eRslt_None, { .sym = c_fn } }, /* FN */
   { "FRAME", eCB_Void, false, eRslt_None, { .vd = c_frame } }, /* FRAME */
   { "FRD", eCB_Void, true, eRslt_ARM, { .vd = m_frd } }, /* FRD CC P R */
   { "FUNCTION", eCB_Void, false, eRslt_None, { .vd = c_function } }, /* FUNCTION / PROC */
