@@ -1,3 +1,11 @@
+Sat Oct  8 12:57:06 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* decode.c (oDecodeTable): CN/FN are not producing ARM code.
+	* area.c (Area_MarkStartAs): Don't do anything when we're in the
+	implicit area.
+	* symbol.c (symbolSymbolELFOutput): Mention symbol name for which we
+	can't find the section id.
+
 Sat Oct  8 11:40:24 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* m_cpumem.c (DestMem_RelocUpdater): Fix load pc-rel based in ABS Area.
